--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Doing Splits"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".GamesListActivity">
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".GamesListActivity"
+            android:label="@string/title_activity_games_list">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +21,7 @@
         <activity
             android:name=".SplitActivity"
             android:label="@string/title_activity_split"
-            android:parentActivityName=".GamesListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".GamesListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="kgarrison.doingsplits.GamesListActivity" />
