--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="kgarrison.doingsplits">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -8,7 +9,9 @@
         android:label="Doing Splits"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:fullBackupContent="@xml/backup_descriptor"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".GamesListActivity"
             android:label="@string/title_activity_games_list">
@@ -21,7 +24,8 @@
         <activity
             android:name=".SplitActivity"
             android:label="@string/title_activity_split"
-            android:parentActivityName=".GamesListActivity">
+            android:parentActivityName=".GamesListActivity"
+            tools:targetApi="jelly_bean">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="kgarrison.doingsplits.GamesListActivity" />
