--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="kgarrison.doingsplits.GamesListActivity" />
         </activity>
-        <activity android:name=".ViewCategoriesActivity"></activity>
+        <activity android:name=".ViewCategoriesActivity" />
+        <activity android:name=".LeaderboardActivity"></activity>
     </application>
 
 </manifest>
